tests/files/lexer_tests/should_fail/086.cmdr
//Should not parse due to no semicolon
else echo hi